unpackaged/main/default/objects/ClientAddressFields__c/ClientAddressFields__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Client Address Fields</label>
    
</CustomObject>