unpackaged/main/default/objects/ClientAddressFields__c/fields/Address3__c.field-meta.xml
<CustomField>
    <fullName>Address3__c</fullName>
    <label>Address3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>