unpackaged/main/default/objects/ClientAddressFields__c/fields/AddressTypology__c.field-meta.xml
<CustomField>
    <fullName>AddressTypology__c</fullName>
    <label>AddressTypology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>