unpackaged/main/default/objects/ClientAddressFields__c/fields/IsValid__c.field-meta.xml
<CustomField>
    <fullName>IsValid__c</fullName>
    <label>IsValid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>